--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -361,3 +361,19 @@
     year = "2015"
 }
 
+@Misc{nauarimaarmarules,
+    author = {Robert Nau},
+    title = Identifying the numbers of {AR} or {MA} terms in an {ARIMA} model},
+    date = {June 2018},
+    note = {\url{https://people.duke.edu/~rnau/411arim3.htm}, Accessed January 2019},
+}
+
+@book{hyndman2008forecasting,
+    title={Forecasting with Exponential Smoothing: The State Space Approach},
+    author={Hyndman, R. and Koehler, A.B. and Ord, J.K. and Snyder, R.D.},
+    isbn={9783540719182},
+    series={Springer Series in Statistics},
+    url={https://books.google.ro/books?id=GSyzox8Lu9YC},
+    year={2008},
+    publisher={Springer Berlin Heidelberg}
+}
