--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -377,3 +377,10 @@
     year={2008},
     publisher={Springer Berlin Heidelberg}
 }
+
+@Misc{nauspectrum,
+    author = {Robert Nau},
+    title = {Introduction to {ARIMA} models},
+    date = {June 2018},
+    note = {\url{https://people.duke.edu/~rnau/Slides_on_ARIMA_models--Robert_Nau.pdf}, Accessed December 2018},
+}
