--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -384,3 +384,81 @@
     date = {June 2018},
     note = {\url{https://people.duke.edu/~rnau/Slides_on_ARIMA_models--Robert_Nau.pdf}, Accessed December 2018},
 }
+
+@Misc{fpp2residuals,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Residual diagnostics},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/residuals.html}, Accessed February 2019},
+}
+
+@article{qqplots,
+    author = {WILK, M. B. and GNANADESIKAN, R.},
+    title = {Probability plotting methods for the analysis for the analysis of data},
+    journal = {Biometrika},
+    volume = {55},
+    number = {1},
+    pages = {1-17},
+    year = {1968},
+    doi = {10.1093/biomet/55.1.1},
+    URL = {http://dx.doi.org/10.1093/biomet/55.1.1},
+    eprint = {/oup/backfile/content_public/journal/biomet/55/1/10.1093/biomet/55.1.1/2/55-1-1.pdf}
+}
+
+@article{ljungboxtest,
+    author = {LJUNG, G. M. and BOX, G. E. P.},
+    title = {On a measure of lack of fit in time series models},
+    journal = {Biometrika},
+    volume = {65},
+    number = {2},
+    pages = {297-303},
+    year = {1978},
+    doi = {10.1093/biomet/65.2.297},
+    URL = {http://dx.doi.org/10.1093/biomet/65.2.297},
+    eprint = {/oup/backfile/content_public/journal/biomet/65/2/10.1093/biomet/65.2.297/2/65-2-297.pdf}
+}
+
+@Misc{fpp2predictors,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Selecting predictors},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/selecting-predictors.html}, Accessed February 2019},
+}
+
+@article{8020rule,
+    author = { George   E.P.   Box  and  R.   Daniel   Meyer },
+    title = {An Analysis for Unreplicated Fractional Factorials},
+    journal = {Technometrics},
+    volume = {28},
+    number = {1},
+    pages = {11-18},
+    year  = {1986},
+    publisher = {Taylor & Francis},
+    doi = {10.1080/00401706.1986.10488093},
+    
+    URL = { 
+    https://www.tandfonline.com/doi/abs/10.1080/00401706.1986.10488093
+    
+    },
+    eprint = { 
+    https://www.tandfonline.com/doi/pdf/10.1080/00401706.1986.10488093
+    
+    }    
+}
+
+@ARTICLE{Hyndman06anotherlook,
+    author = {Rob J Hyndman and Anne B Koehler},
+    title = {Another look at measures of forecast accuracy},
+    journal = {International Journal of Forecasting},
+    year = {2006},
+    pages = {679--688}
+}
+
+@article{armstrongevaluatingforecastingmethods,
+    author = {Armstrong, J},
+    year = {2001},
+    month = {01},
+    pages = {},
+    title = {Evaluating Forecasting Methods},
+    doi = {10.1007/978-0-306-47630-3_20}
+}
